[gd_scene load_steps=13 format=3 uid="uid://crvuwjs3w00bg"]

[ext_resource type="Script" uid="uid://1xxutjwmehfk" path="res://Scripts/bulllet.gd" id="1_hrmwm"]

[sub_resource type="BoxMesh" id="BoxMesh_y2otj"]
size = Vector3(0.04, 0.4, 0.04)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hhb8p"]
albedo_color = Color(0.976471, 0.580392, 0.0901961, 1)
metallic = 0.5
roughness = 0.5
emission_enabled = true
emission = Color(0.976471, 0.580392, 0.0901961, 1)
emission_energy_multiplier = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_80x4m"]
albedo_color = Color(0.976471, 0.580392, 0.0901961, 1)
emission_enabled = true
emission = Color(1, 0.262745, 0.00392157, 1)
emission_energy_multiplier = 8.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hfuva"]
emission_shape_scale = Vector3(0, 0, 1)
direction = Vector3(0, 0, 1)
spread = 50.0
initial_velocity_min = 3.0
initial_velocity_max = 5.0

[sub_resource type="SphereMesh" id="SphereMesh_888x7"]
radius = 0.025
height = 0.05

[sub_resource type="Curve" id="Curve_ainu6"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_q8ovd"]
curve = SubResource("Curve_ainu6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6c505"]
lifetime_randomness = 0.5
emission_shape_scale = Vector3(-1, 1, -1)
angle_min = 1.07288e-05
angle_max = 90.0
direction = Vector3(0, 0, -1)
initial_velocity_min = 6.0
initial_velocity_max = 6.0
scale_curve = SubResource("CurveTexture_q8ovd")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nqguj"]
albedo_color = Color(0.329412, 0.227451, 0.0784314, 1)
metallic = 0.5
metallic_specular = 1.0
roughness = 0.0
emission_enabled = true
emission = Color(0.329412, 0.227451, 0.0784314, 1)
emission_energy_multiplier = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_px0ab"]
material = SubResource("StandardMaterial3D_nqguj")
radius = 0.04
height = 0.08

[sub_resource type="SphereMesh" id="SphereMesh_qkqww"]
material = SubResource("StandardMaterial3D_nqguj")
radius = 0.04
height = 0.08

[node name="Bulllet" type="Node3D"]
script = ExtResource("1_hrmwm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.793636)
layers = 2
lod_bias = 0.2
gi_mode = 0
mesh = SubResource("BoxMesh_y2otj")
surface_material_override/0 = SubResource("StandardMaterial3D_hhb8p")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, 3.01992e-07, 0, -1.50996e-07, -2, 0, 0, -0.00300353)
target_position = Vector3(0, 0, -1)
collision_mask = 2
hit_back_faces = false
collide_with_areas = true

[node name="Sparks" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0119796)
layers = 3
material_override = SubResource("StandardMaterial3D_80x4m")
visibility_range_end = 240.0
visibility_range_end_margin = 480.0
visibility_range_fade_mode = 2
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_hfuva")
draw_pass_1 = SubResource("SphereMesh_888x7")

[node name="Blood_Splatter" type="GPUParticles3D" parent="."]
layers = 4
emitting = false
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_6c505")
draw_pass_1 = SubResource("SphereMesh_px0ab")

[node name="Terrain_Splatter" type="GPUParticles3D" parent="."]
layers = 4
emitting = false
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_6c505")
draw_pass_1 = SubResource("SphereMesh_qkqww")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
